--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon SRC/index.js"
+    "dev": "nodemon SRC/index.js"
   },
   "type": "module",
   "keywords": [],
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.9.1",
     "nodemon": "^3.1.9"
   }
 }
